--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "node": "^19.8.1"
-  }
+    "node": "^19.8.1",
+    "os": "^0.1.2"
+  },
+  "proxy": "http://172.18.179.14:8000"
 }
